[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dnd_controller_LILBROCODES"
version = "0.0.1"
authors = [
  { name="LilBroCodes", email="lilbrocodes@gmail.com" },
]
description = "Library using pygame that lets you create custom dnd campaigns, with custom Character classes. "
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/LilBroCodes/DNDController/"
Issues = "https://github.com/LilBroCodes/DNDController/issues/"